style(code): :lipstick: fix code style
code style too small in headings

--- a/less/common/theme.less
+++ b/less/common/theme.less
@@ -109,7 +109,7 @@ code {
   border-radius: 0.3rem;
   padding: 0.1rem 0.3rem;
   word-wrap: break-word; // prevent long sentence overflows the page
-  font-size: 1.3rem; // code needs to be smaller
+  font-size: 0.92em; // code needs to be smaller, and needs to match the parent div font size
 }
 
 table thead tr, table tbody tr {
